docs/docusaurus/versioned_docs/version-0.17/reference/api/datasource/fluent/sql_datasource/QueryAsset_class.mdx
---
title: QueryAsset
sidebar_label: QueryAsset
---


<section class="sphinx-api-doc" id="queryasset">

<dl class="py class">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset">
<em class="property"><span class="pre">class</span><span class="w"> </span></em><span class="sig-prename descclassname"><span class="pre">great_expectations.datasource.fluent.sql_datasource.</span></span><span class="sig-name descname"><span class="pre">QueryAsset</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="o"><span class="pre">*</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">name</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">type</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Literal</span><span class="p"><span class="pre">[</span></span><span class="s"><span class="pre">'query'</span></span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">'query'</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">id</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">uuid.UUID</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">order_by</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">List</span><span class="p"><span class="pre">[</span></span><span class="pre">great_expectations.datasource.fluent.interfaces.Sorter</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">batch_metadata</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Dict</span><span class="p"><span class="pre">[</span></span><span class="pre">str</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">Any</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">splitter</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">Union</span><span class="p"><span class="pre">[</span></span><span class="pre">great_expectations.datasource.fluent.sql_datasource.SplitterColumnValue</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">great_expectations.datasource.fluent.sql_datasource.SplitterMultiColumnValue</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">great_expectations.datasource.fluent.sql_datasource.SplitterDividedInteger</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">great_expectations.datasource.fluent.sql_datasource.SplitterModInteger</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">great_expectations.datasource.fluent.sql_datasource.SplitterYear</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">great_expectations.datasource.fluent.sql_datasource.SplitterYearAndMonth</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">great_expectations.datasource.fluent.sql_datasource.SplitterYearAndMonthAndDay</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">great_expectations.datasource.fluent.sql_datasource.SplitterDatetimePart</span><span class="p"><span class="pre">]</span></span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">query</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em><span class="sig-paren">)</span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset" title="Permalink to this definition">#</a>
</dt>

<dd><dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_column_value">
<span class="sig-name descname"><span class="pre">add_splitter_column_value</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">column_name</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Self</span></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_column_value" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Associates a column value splitter with this sql asset.
:param column_name: A column name of the column to split on.</p>
<dl class="field-list simple">
<dt class="field-odd">Returns
</dt>

<dd class="field-odd"><p>This sql asset so we can use this method fluently.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_datetime_part">
<span class="sig-name descname"><span class="pre">add_splitter_datetime_part</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">column_name</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">datetime_parts</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">List</span><span class="p"><span class="pre">[</span></span><span class="pre">str</span><span class="p"><span class="pre">]</span></span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Self</span></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_datetime_part" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Associates a datetime part splitter with this sql asset.
:param column_name: Name of the date column where parts will be parsed out.
:param datetime_parts: A list of datetime parts to split on, specified as DatePart objects or as their string equivalent e.g. “year”, “month”, “week”, “day”, “hour”, “minute”, or “second”</p>
<dl class="field-list simple">
<dt class="field-odd">Returns
</dt>

<dd class="field-odd"><p>This sql asset so we can use this method fluently.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_divided_integer">
<span class="sig-name descname"><span class="pre">add_splitter_divided_integer</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">column_name</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">divisor</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">int</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Self</span></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_divided_integer" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Associates a divided integer splitter with this sql asset.
:param column_name: A column name of the column to split on.
:param divisor: The divisor to use when splitting.</p>
<dl class="field-list simple">
<dt class="field-odd">Returns
</dt>

<dd class="field-odd"><p>This sql asset so we can use this method fluently.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_mod_integer">
<span class="sig-name descname"><span class="pre">add_splitter_mod_integer</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">column_name</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">mod</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">int</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Self</span></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_mod_integer" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Associates a mod integer splitter with this sql asset.
:param column_name: A column name of the column to split on.
:param mod: The mod to use when splitting.</p>
<dl class="field-list simple">
<dt class="field-odd">Returns
</dt>

<dd class="field-odd"><p>This sql asset so we can use this method fluently.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_multi_column_values">
<span class="sig-name descname"><span class="pre">add_splitter_multi_column_values</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">column_names</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">list</span><span class="p"><span class="pre">[</span></span><span class="pre">str</span><span class="p"><span class="pre">]</span></span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Self</span></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_multi_column_values" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Associates a multi column value splitter with this sql asset.
:param column_names: A list of column names to split on.</p>
<dl class="field-list simple">
<dt class="field-odd">Returns
</dt>

<dd class="field-odd"><p>This sql asset so we can use this method fluently.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_year">
<span class="sig-name descname"><span class="pre">add_splitter_year</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">column_name</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Self</span></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_year" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Associates a year splitter with this sql data asset.
:param column_name: A column name of the date column where year and month will be parsed out.</p>
<dl class="field-list simple">
<dt class="field-odd">Returns
</dt>

<dd class="field-odd"><p>This sql asset so we can use this method fluently.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_year_and_month">
<span class="sig-name descname"><span class="pre">add_splitter_year_and_month</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">column_name</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Self</span></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_year_and_month" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Associates a year, month splitter with this sql asset.
:param column_name: A column name of the date column where year and month will be parsed out.</p>
<dl class="field-list simple">
<dt class="field-odd">Returns
</dt>

<dd class="field-odd"><p>This sql asset so we can use this method fluently.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_year_and_month_and_day">
<span class="sig-name descname"><span class="pre">add_splitter_year_and_month_and_day</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">column_name</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">str</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Self</span></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.add_splitter_year_and_month_and_day" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Associates a year, month, day splitter with this sql asset.
:param column_name: A column name of the date column where year and month will be parsed out.</p>
<dl class="field-list simple">
<dt class="field-odd">Returns
</dt>

<dd class="field-odd"><p>This sql asset so we can use this method fluently.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.datasource.fluent.sql_datasource.QueryAsset.build_batch_request">
<span class="sig-name descname"><span class="pre">build_batch_request</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">options</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">BatchRequestOptions</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">batch_slice</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">BatchSlice</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/core/batch/BatchRequest_class#great_expectations.core.batch.BatchRequest" title="great_expectations.core.batch.BatchRequest"><span class="pre">BatchRequest</span></a></span></span><a class="headerlink" href="#great_expectations.datasource.fluent.sql_datasource.QueryAsset.build_batch_request" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>A batch request that can be used to obtain batches for this DataAsset.</p>
<dl class="field-list simple">
<dt class="field-odd">Parameters
</dt>

<dd class="field-odd"><ul class="simple">
<li><p><strong>options</strong> – A dict that can be used to filter the batch groups returned from the asset.
The dict structure depends on the asset type. The available keys for dict can be obtained by
calling batch_request_options.</p></li>
<li><p><strong>batch_slice</strong> – A python slice that can be used to limit the sorted batches by index.
e.g. <cite>batch_slice = “[-5:]”</cite> will request only the last 5 batches after the options filter is applied.</p></li>
</ul>
</dd>
<dt class="field-even">Returns
</dt>

<dd class="field-even"><p>A BatchRequest object that can be used to obtain a batch list from a Datasource by calling the
get_batch_list_from_batch_request method.</p>
</dd>
</dl>
</dd></dl>
</dd></dl>
</section>